// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings.MyBertyId renders correctly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      appearance="default"
      level="1"
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
          },
          Object {
            "backgroundColor": "#535AE4",
            "flex": 1,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "padding": 16,
            },
            Object {
              "backgroundColor": "#535AE4",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "top": 35,
              "zIndex": 10,
            }
          }
        >
          <View
            style={
              Object {
                "zIndex": -1,
              }
            }
          >
            <View
              style={
                Array [
                  undefined,
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 45,
                    "height": 90,
                    "justifyContent": "center",
                    "width": 90,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  style={
                    Array [
                      undefined,
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#b8bd4a",
                        "borderRadius": 45,
                        "height": 90,
                        "justifyContent": "center",
                        "width": 90,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 30,
                        },
                        Object {
                          "color": "#383B62",
                          "fontFamily": "Open Sans",
                        },
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 45,
                          "includeFontPadding": false,
                        },
                      ]
                    }
                  >
                    A
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "borderRadius": 30,
              },
              Object {
                "marginHorizontal": 16,
              },
              Object {
                "paddingTop": 24,
              },
              Object {
                "backgroundColor": "#FFFFFF",
              },
              Object {
                "paddingBottom": 40,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "paddingHorizontal": 32,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "marginTop": 16,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "stretch",
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    },
                  ]
                }
              >
                <View
                  accessibilityLabel="tabs.qr"
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "flex": 1,
                      "opacity": 1,
                      "paddingBottom": 4,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "justifyContent": "space-between",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 25,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "transform": Array [
                              Object {
                                "scale": 1,
                              },
                            ],
                          }
                        }
                      >
                        <AssetMock
                          color="#535AE4"
                          height={25}
                          style={
                            Object {
                              "transform": undefined,
                            }
                          }
                          width={25}
                        />
                      </View>
                    </View>
                    <Text
                      style={
                        Array [
                          Object {
                            "fontSize": 30,
                          },
                          Object {
                            "color": "#383B62",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontFamily": "Bold Open Sans",
                            },
                            Object {
                              "textAlign": "center",
                            },
                            Object {
                              "fontSize": 26,
                            },
                            Object {
                              "color": "#535AE4",
                            },
                          ],
                        ]
                      }
                    >
                      tabs.qr
                    </Text>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "bottom": 0,
                          "left": "2.5%",
                          "position": "absolute",
                          "width": "95%",
                        },
                        Object {
                          "borderWidth": 2,
                        },
                        Object {
                          "borderRadius": 2,
                        },
                        Object {
                          "borderColor": "#535AE4",
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  accessibilityLabel="tabs.fingerprint"
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "flex": 1,
                      "opacity": 1,
                      "paddingBottom": 4,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "opacity": 0.2,
                        },
                        Object {
                          "alignItems": "center",
                          "justifyContent": "space-between",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 25,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "transform": Array [
                              Object {
                                "scale": 1,
                              },
                            ],
                          }
                        }
                      >
                        <AssetMock
                          color="#383B62"
                          height={25}
                          style={
                            Object {
                              "transform": undefined,
                            }
                          }
                          width={25}
                        />
                      </View>
                    </View>
                    <Text
                      style={
                        Array [
                          Object {
                            "fontSize": 30,
                          },
                          Object {
                            "color": "#383B62",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontFamily": "Bold Open Sans",
                            },
                            Object {
                              "textAlign": "center",
                            },
                            Object {
                              "fontSize": 26,
                            },
                            Object {
                              "color": "#383B62",
                            },
                          ],
                        ]
                      }
                    >
                      tabs.fingerprint
                    </Text>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "bottom": 0,
                          "left": "2.5%",
                          "position": "absolute",
                          "width": "95%",
                        },
                        Object {
                          "borderWidth": 2,
                        },
                        Object {
                          "borderRadius": 2,
                        },
                        Object {
                          "borderColor": "#383B62",
                        },
                        Object {
                          "opacity": 0.2,
                        },
                      ]
                    }
                  />
                </View>
              </View>
            </View>
            <View>
              <View
                style={
                  Array [
                    Object {
                      "alignSelf": "center",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "paddingTop": 32,
                      },
                    ]
                  }
                >
                  <QRCodeMock
                    backgroundColor="#FFFFFF"
                    color="#535AE4"
                    logo="AssetMock"
                    mode="circle"
                    size={462.5}
                    value="https://berty.tech/mock#contact/5cf2bc99-2721-407d-992b-a00fbdf302f2/name=Alice"
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "backgroundColor": "#CED2FF",
              "borderRadius": 30,
              "bottom": 30,
              "height": 60,
              "marginRight": 60,
              "opacity": 1,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 2,
              "width": 60,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                },
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                }
              }
            >
              <AssetMock
                color="#535AE4"
                height={26}
                style={
                  Object {
                    "alignSelf": "center",
                  }
                }
                width={26}
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Settings.MyBertyId renders correctly 2`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      appearance="default"
      level="1"
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
          },
          Object {
            "backgroundColor": "#535AE4",
            "flex": 1,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "padding": 16,
            },
            Object {
              "backgroundColor": "#535AE4",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "top": 35,
              "zIndex": 10,
            }
          }
        >
          <View
            style={
              Object {
                "zIndex": -1,
              }
            }
          >
            <View
              style={
                Array [
                  undefined,
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 45,
                    "height": 90,
                    "justifyContent": "center",
                    "width": 90,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  style={
                    Array [
                      undefined,
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#b8bd4a",
                        "borderRadius": 45,
                        "height": 90,
                        "justifyContent": "center",
                        "width": 90,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 30,
                        },
                        Object {
                          "color": "#383B62",
                          "fontFamily": "Open Sans",
                        },
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 45,
                          "includeFontPadding": false,
                        },
                      ]
                    }
                  >
                    A
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "borderRadius": 30,
              },
              Object {
                "marginHorizontal": 16,
              },
              Object {
                "paddingTop": 24,
              },
              Object {
                "backgroundColor": "#FFFFFF",
              },
              Object {
                "paddingBottom": 40,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "paddingHorizontal": 32,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "marginTop": 16,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "stretch",
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    },
                  ]
                }
              >
                <View
                  accessibilityLabel="tabs.qr"
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "flex": 1,
                      "opacity": 1,
                      "paddingBottom": 4,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "opacity": 0.2,
                        },
                        Object {
                          "alignItems": "center",
                          "justifyContent": "space-between",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 25,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "transform": Array [
                              Object {
                                "scale": 1,
                              },
                            ],
                          }
                        }
                      >
                        <AssetMock
                          color="#383B62"
                          height={25}
                          style={
                            Object {
                              "transform": undefined,
                            }
                          }
                          width={25}
                        />
                      </View>
                    </View>
                    <Text
                      style={
                        Array [
                          Object {
                            "fontSize": 30,
                          },
                          Object {
                            "color": "#383B62",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontFamily": "Bold Open Sans",
                            },
                            Object {
                              "textAlign": "center",
                            },
                            Object {
                              "fontSize": 26,
                            },
                            Object {
                              "color": "#383B62",
                            },
                          ],
                        ]
                      }
                    >
                      tabs.qr
                    </Text>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "bottom": 0,
                          "left": "2.5%",
                          "position": "absolute",
                          "width": "95%",
                        },
                        Object {
                          "borderWidth": 2,
                        },
                        Object {
                          "borderRadius": 2,
                        },
                        Object {
                          "borderColor": "#383B62",
                        },
                        Object {
                          "opacity": 0.2,
                        },
                      ]
                    }
                  />
                </View>
                <View
                  accessibilityLabel="tabs.fingerprint"
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "flex": 1,
                      "opacity": 1,
                      "paddingBottom": 4,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "justifyContent": "space-between",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 25,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "transform": Array [
                              Object {
                                "scale": 1,
                              },
                            ],
                          }
                        }
                      >
                        <AssetMock
                          color="#535AE4"
                          height={25}
                          style={
                            Object {
                              "transform": undefined,
                            }
                          }
                          width={25}
                        />
                      </View>
                    </View>
                    <Text
                      style={
                        Array [
                          Object {
                            "fontSize": 30,
                          },
                          Object {
                            "color": "#383B62",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontFamily": "Bold Open Sans",
                            },
                            Object {
                              "textAlign": "center",
                            },
                            Object {
                              "fontSize": 26,
                            },
                            Object {
                              "color": "#535AE4",
                            },
                          ],
                        ]
                      }
                    >
                      tabs.fingerprint
                    </Text>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "bottom": 0,
                          "left": "2.5%",
                          "position": "absolute",
                          "width": "95%",
                        },
                        Object {
                          "borderWidth": 2,
                        },
                        Object {
                          "borderRadius": 2,
                        },
                        Object {
                          "borderColor": "#535AE4",
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
            </View>
            <View>
              <View
                style={
                  Array [
                    Object {
                      "alignSelf": "center",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "paddingTop": 32,
                      },
                      Object {
                        "width": 495,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "borderRadius": 16,
                        },
                        Object {
                          "padding": 16,
                        },
                        Object {
                          "backgroundColor": "#F7F8FF",
                          "width": "100%",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignItems": "stretch",
                            "flexDirection": "column",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "stretch",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                            },
                          ]
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 30,
                              },
                              Object {
                                "color": "#383B62",
                                "fontFamily": "Open Sans",
                              },
                              Array [
                                Object {
                                  "fontFamily": "Bold Open Sans",
                                },
                                Object {
                                  "fontSize": 26,
                                },
                                Object {
                                  "color": "#535AE4",
                                  "fontFamily": "Courier",
                                },
                              ],
                            ]
                          }
                        >
                          636A
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 30,
                              },
                              Object {
                                "color": "#383B62",
                                "fontFamily": "Open Sans",
                              },
                              Array [
                                Object {
                                  "fontFamily": "Bold Open Sans",
                                },
                                Object {
                                  "fontSize": 26,
                                },
                                Object {
                                  "color": "#535AE4",
                                  "fontFamily": "Courier",
                                },
                              ],
                            ]
                          }
                        >
                          5088
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 30,
                              },
                              Object {
                                "color": "#383B62",
                                "fontFamily": "Open Sans",
                              },
                              Array [
                                Object {
                                  "fontFamily": "Bold Open Sans",
                                },
                                Object {
                                  "fontSize": 26,
                                },
                                Object {
                                  "color": "#535AE4",
                                  "fontFamily": "Courier",
                                },
                              ],
                            ]
                          }
                        >
                          B175
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 30,
                              },
                              Object {
                                "color": "#383B62",
                                "fontFamily": "Open Sans",
                              },
                              Array [
                                Object {
                                  "fontFamily": "Bold Open Sans",
                                },
                                Object {
                                  "fontSize": 26,
                                },
                                Object {
                                  "color": "#535AE4",
                                  "fontFamily": "Courier",
                                },
                              ],
                            ]
                          }
                        >
                          E091
                        </Text>
                      </View>
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "stretch",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                            },
                          ]
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 30,
                              },
                              Object {
                                "color": "#383B62",
                                "fontFamily": "Open Sans",
                              },
                              Array [
                                Object {
                                  "fontFamily": "Bold Open Sans",
                                },
                                Object {
                                  "fontSize": 26,
                                },
                                Object {
                                  "color": "#535AE4",
                                  "fontFamily": "Courier",
                                },
                              ],
                            ]
                          }
                        >
                          93BF
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 30,
                              },
                              Object {
                                "color": "#383B62",
                                "fontFamily": "Open Sans",
                              },
                              Array [
                                Object {
                                  "fontFamily": "Bold Open Sans",
                                },
                                Object {
                                  "fontSize": 26,
                                },
                                Object {
                                  "color": "#535AE4",
                                  "fontFamily": "Courier",
                                },
                              ],
                            ]
                          }
                        >
                          76B6
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 30,
                              },
                              Object {
                                "color": "#383B62",
                                "fontFamily": "Open Sans",
                              },
                              Array [
                                Object {
                                  "fontFamily": "Bold Open Sans",
                                },
                                Object {
                                  "fontSize": 26,
                                },
                                Object {
                                  "color": "#535AE4",
                                  "fontFamily": "Courier",
                                },
                              ],
                            ]
                          }
                        >
                          3CB4
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 30,
                              },
                              Object {
                                "color": "#383B62",
                                "fontFamily": "Open Sans",
                              },
                              Array [
                                Object {
                                  "fontFamily": "Bold Open Sans",
                                },
                                Object {
                                  "fontSize": 26,
                                },
                                Object {
                                  "color": "#535AE4",
                                  "fontFamily": "Courier",
                                },
                              ],
                            ]
                          }
                        >
                          5C50
                        </Text>
                      </View>
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "stretch",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                            },
                          ]
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 30,
                              },
                              Object {
                                "color": "#383B62",
                                "fontFamily": "Open Sans",
                              },
                              Array [
                                Object {
                                  "fontFamily": "Bold Open Sans",
                                },
                                Object {
                                  "fontSize": 26,
                                },
                                Object {
                                  "color": "#535AE4",
                                  "fontFamily": "Courier",
                                },
                              ],
                            ]
                          }
                        >
                          F56F
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 30,
                              },
                              Object {
                                "color": "#383B62",
                                "fontFamily": "Open Sans",
                              },
                              Array [
                                Object {
                                  "fontFamily": "Bold Open Sans",
                                },
                                Object {
                                  "fontSize": 26,
                                },
                                Object {
                                  "color": "#535AE4",
                                  "fontFamily": "Courier",
                                },
                              ],
                            ]
                          }
                        >
                          7B4F
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 30,
                              },
                              Object {
                                "color": "#383B62",
                                "fontFamily": "Open Sans",
                              },
                              Array [
                                Object {
                                  "fontFamily": "Bold Open Sans",
                                },
                                Object {
                                  "fontSize": 26,
                                },
                                Object {
                                  "color": "#535AE4",
                                  "fontFamily": "Courier",
                                },
                              ],
                            ]
                          }
                        >
                          6852
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 30,
                              },
                              Object {
                                "color": "#383B62",
                                "fontFamily": "Open Sans",
                              },
                              Array [
                                Object {
                                  "fontFamily": "Bold Open Sans",
                                },
                                Object {
                                  "fontSize": 26,
                                },
                                Object {
                                  "color": "#535AE4",
                                  "fontFamily": "Courier",
                                },
                              ],
                            ]
                          }
                        >
                          AF6C
                        </Text>
                      </View>
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "stretch",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                            },
                          ]
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 30,
                              },
                              Object {
                                "color": "#383B62",
                                "fontFamily": "Open Sans",
                              },
                              Array [
                                Object {
                                  "fontFamily": "Bold Open Sans",
                                },
                                Object {
                                  "fontSize": 26,
                                },
                                Object {
                                  "color": "#535AE4",
                                  "fontFamily": "Courier",
                                },
                              ],
                            ]
                          }
                        >
                          FB5D
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 30,
                              },
                              Object {
                                "color": "#383B62",
                                "fontFamily": "Open Sans",
                              },
                              Array [
                                Object {
                                  "fontFamily": "Bold Open Sans",
                                },
                                Object {
                                  "fontSize": 26,
                                },
                                Object {
                                  "color": "#535AE4",
                                  "fontFamily": "Courier",
                                },
                              ],
                            ]
                          }
                        >
                          0664
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 30,
                              },
                              Object {
                                "color": "#383B62",
                                "fontFamily": "Open Sans",
                              },
                              Array [
                                Object {
                                  "fontFamily": "Bold Open Sans",
                                },
                                Object {
                                  "fontSize": 26,
                                },
                                Object {
                                  "color": "#535AE4",
                                  "fontFamily": "Courier",
                                },
                              ],
                            ]
                          }
                        >
                          B3E4
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 30,
                              },
                              Object {
                                "color": "#383B62",
                                "fontFamily": "Open Sans",
                              },
                              Array [
                                Object {
                                  "fontFamily": "Bold Open Sans",
                                },
                                Object {
                                  "fontSize": 26,
                                },
                                Object {
                                  "color": "#535AE4",
                                  "fontFamily": "Courier",
                                },
                              ],
                            ]
                          }
                        >
                          ABB7
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "backgroundColor": "#CED2FF",
              "borderRadius": 30,
              "bottom": 30,
              "height": 60,
              "marginRight": 60,
              "opacity": 1,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 2,
              "width": 60,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                },
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                }
              }
            >
              <AssetMock
                color="#535AE4"
                height={26}
                style={
                  Object {
                    "alignSelf": "center",
                  }
                }
                width={26}
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
